fix faq heading cut off

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27258,7 +27258,6 @@ figcaption {
   background-size: cover;
   background-position: center;
   height: 35vh;
-  margin-top: -60px;
 }
 
 .csu-wrapper figure img {
