--- a/resources/src/sass/_images.scss
+++ b/resources/src/sass/_images.scss
@@ -85,7 +85,6 @@
 	background-size: cover;
 	background-position: center;
 	height: 35vh;
-	margin-top: -60px;
 }
 .csu-wrapper {
 	figure {
